syntax = "proto3";
package control;

option go_package = "/proto/control";

message JoinLobby {
  string player_id = 1;
}

message StartGame {
  int32 udp_port = 1;
  string session_token = 2;
  string player_id = 3;
}
