syntax = "proto3";
package realtime;

option go_package = "/proto/realtime";

message ClientInput {
  string session_token = 1;
  uint32 seq = 2;
  int64 timestamp = 3;
  float move_x = 4;
  float move_y = 5;
  bool ability_fire = 6;
}

message PlayerState {
  string player_id = 1;
  float x = 2;
  float y = 3;
  uint32 last_processed_seq = 4;
}

message ServerSnapshot {
  uint32 tick = 1;
  repeated PlayerState players = 2;
}
